--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.idea
+
 # dependencies
 /node_modules
 /.pnp
@@ -9,6 +11,7 @@
 /coverage
 
 # next.js
+/.husky/
 /.next/
 /out/
 public/sitemap.xml
