--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "fast-glob": "^3.2.11",
+    "fathom-client": "^3.5.0",
     "feed": "^4.2.2",
     "focus-visible": "^5.2.0",
     "next": "^12.3.0",
