--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/loader": "^2.1.2",
     "@next/mdx": "^12.2.3",
     "@tailwindcss/typography": "^0.5.4",
+    "@vercel/og": "^0.0.20",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "fast-glob": "^3.2.11",
