--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.0",
     "@mapbox/rehype-prism": "^0.8.0",
-    "@mdx-js/loader": "^2.1.2",
-    "@next/mdx": "^12.2.3",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^12.3.4",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/og": "^0.0.20",
     "autoprefixer": "^10.4.7",
@@ -22,16 +23,16 @@
     "fathom-client": "^3.5.0",
     "feed": "^4.2.2",
     "focus-visible": "^5.2.0",
-    "next": "^12.3.0",
+    "next": "^13.4.1",
     "postcss-focus-visible": "^6.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.4.1",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11"
   }
