--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@vercel/og": "^0.0.20",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "fast-glob": "^3.2.11",
     "fathom-client": "^3.5.0",
     "feed": "^4.2.2",
     "focus-visible": "^5.2.0",
     "next": "^13.4.1",
+    "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^4.4.1",
     "postcss-focus-visible": "^6.0.4",
     "react": "^18.2.0",
